[project]
name = "cold-email-generator"
version = "0.1.0"
description = "A cold email generator that uses AI to create personalized outreach emails"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.32.0",
    "langchain-community>=0.0.27",
    "langchain-groq>=0.0.6",
    "langchain-core>=0.1.30",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",  # For WebBaseLoader
    "requests>=2.31.0",  # For making HTTP requests
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
]
